--- a/source/less/components/shop.less
+++ b/source/less/components/shop.less
@@ -2,6 +2,21 @@
   position: relative;
 }
 
+.shop__container {
+  width: 280px;
+  margin-left: auto;
+  margin-right: auto;
+
+  @media (min-width: @tablet) {
+    width: 708px;
+  }
+
+  @media (min-width: @laptop) {
+    width: 1220px;
+    margin-top: 50px;
+  }
+}
+
 .shop__list {
   position: relative;
   margin: 0;
