--- a/source/less/components/social.less
+++ b/source/less/components/social.less
@@ -11,7 +11,7 @@
   @media (min-width: @tablet) {
     margin-top: auto;
     margin-bottom: auto;
-    width: 122px;
+    width: 150px;
   }
 }
 
@@ -24,11 +24,19 @@
   @media (max-width: @mobile-only) {
     padding-left: 50px;
   }
+
+  @media (min-width: @tablet) {
+    padding-left: 22px;
+  }
 }
 
 .social__item--last {
   @media (max-width: @mobile-only) {
     padding-right: 50px;
+  }
+
+  @media (min-width: @tablet) {
+    padding-right: 5px;
   }
 }
 
