--- a/source/less/components/advantages.less
+++ b/source/less/components/advantages.less
@@ -22,6 +22,7 @@
   line-height: 40px;
   margin-bottom: 40px;
   font-weight: 400;
+  margin-top: 0px;
 
   @media (min-width: @tablet) {
     font-size: 60px;
