--- a/source/less/components/card.less
+++ b/source/less/components/card.less
@@ -2,11 +2,15 @@
 .card {
   position: relative;
   width: 100%;
+  margin-bottom: 19px;
+  padding-bottom: 25px;
 
   @media (min-width: @tablet) {
     background-color: @grey;
     background-size: 324px 430px;
     background-repeat: no-repeat;
+    margin-bottom: 0;
+    padding-bottom: 0;
   }
 
   @media (min-width: @laptop) {
@@ -21,7 +25,7 @@
     width: calc(100% + 40px);
     height: 1px;
     background-color: @shop-grey;
-    top: 166px;
+    bottom: 0;
     left: -20px;
 
     @media (min-width: @tablet) {
@@ -126,6 +130,7 @@
   margin-bottom: 14px;
   color: @special_dark-grey-2;
   display: block;
+  width: 70%;
 
   @media (min-width: @tablet) {
     font-size: 20px;
@@ -209,7 +214,6 @@
 }
 
 .card__order {
-  margin-bottom: 25px;
   width: 100%;
 
   @media (max-width: @mobile-only) {
