--- a/source/less/components/example.less
+++ b/source/less/components/example.less
@@ -22,7 +22,7 @@
       position: absolute;
       display: block;
       width: 100%;
-      height: 205px;
+      height: 158px;
       background-color: @white;
       left: 0;
       top: 0;
@@ -53,13 +53,15 @@
   line-height: 40px;
   margin-bottom: 40px;
   font-weight: 400;
-  padding-top: 21px;
+  padding-top: 25px;
+  margin-top: -4px;
 
   @media (min-width: @tablet) {
     font-size: 60px;
     line-height: 60px;
     margin-bottom: 63px;
     padding-top: 43px;
+    margin-top: 0;
   }
 
   @media (min-width: @laptop) {
@@ -244,10 +246,14 @@
 }
 
 .example__slider {
-  padding-bottom: 40px;
+  padding-bottom: 34px;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
+
+  @media (min-width: @tablet) {
+    padding-bottom: 60px;
+  }
 
   @media (min-width: @laptop) {
     margin-left: 97px;
