--- a/source/less/components/programs.less
+++ b/source/less/components/programs.less
@@ -128,12 +128,14 @@
   padding-top: 30px;
   text-transform: uppercase;
   font-weight: 400;
+  margin-top: 0px;
 
   @media (min-width: @tablet) {
     font-size: 36px;
     line-height: 36px;
     padding-top: 76px;
     margin-left: 0;
+    margin-bottom: 0;
   }
 
   @media (min-width: @laptop) {
