Добавляет некотоые правки после первой проверки

--- a/source/less/components/page.less
+++ b/source/less/components/page.less
@@ -1,6 +1,6 @@
 .page {
   height: auto;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", Arial, sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
