--- a/source/less/globals/global.less
+++ b/source/less/globals/global.less
@@ -20,7 +20,23 @@ body {
 @font-face {
   font-family: "Oswald";
   font-style: normal;
-  font-weight: 700;
+  font-weight: 400;
+  src: url("../fonts/oswaldregular.woff") format("woff");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Oswald";
+  font-style: normal;
+  font-weight: 400;
   src: url("../fonts/oswaldmedium.woff2") format("woff2");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Oswald";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/oswaldmedium.woff") format("woff");
   font-display: swap;
 }
