--- a/source/less/components/main-nav.less
+++ b/source/less/components/main-nav.less
@@ -105,7 +105,7 @@
 }
 
 .main-nav__link {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", Arial, sans-serif;
   font-size: 20px;
   line-height: 20px;
   font-weight: 500;
