Добавляет правки 9 из 10 основных критериев

--- a/source/less/components/additions.less
+++ b/source/less/components/additions.less
@@ -143,6 +143,7 @@
   font-weight: 400;
   text-transform: uppercase;
   margin-top: 0;
+  color: @special_dark-grey-2;
 
   @media (min-width: @tablet) {
     font-size: 20px;
@@ -165,6 +166,7 @@
   justify-content: space-between;
   margin-bottom: 15px;
   flex-wrap: wrap;
+  color: @special_dark-grey;
 
   @media (min-width: @tablet) {
     width: auto;
