--- a/source/less/components/advantages.less
+++ b/source/less/components/advantages.less
@@ -3,20 +3,6 @@
   width: 100%;
 }
 
-.advantages__wrapper {
-  width: 280px;
-  margin-left: auto;
-  margin-right: auto;
-
-  @media (min-width: @tablet) {
-    width: 708px;
-  }
-
-  @media (min-width: @laptop) {
-    width: 1220px;
-  }
-}
-
 .advantages__title {
   font-size: 36px;
   line-height: 40px;
@@ -84,6 +70,7 @@
   align-self: center;
   margin-top: 0;
   margin-bottom: 0;
+  color: @special_dark-grey;
 
   @media (min-width: @tablet) {
     font-size: 16px;
