--- a/source/less/components/footer-contacts.less
+++ b/source/less/components/footer-contacts.less
@@ -6,6 +6,18 @@
   }
 }
 
+.footer-contact__outer-wrapper {
+  @media (min-width: @laptop) {
+    position: relative;
+    width: 1220px;
+    margin-left: auto;
+    margin-right: auto;
+    min-height: 400px;
+    z-index: 2;
+    pointer-events: none;
+  }
+}
+
 .footer-contacts__wrapper {
   display: flex;
   flex-wrap: wrap;
@@ -25,8 +37,8 @@
     background-color: @white;
     width: 565px;
     height: 198px;
-    left: 110px;
-    top: 49%;
+    top: 50%;
+    align-self: center;
     transform: translateY(-50%);
     margin-bottom: 0;
     display: flex;
@@ -34,6 +46,7 @@
     padding-left: 80px;
     padding-right: 80px;
     box-sizing: border-box;
+    pointer-events: auto;
   }
 }
 
@@ -115,5 +128,7 @@
   @media (min-width: @laptop) {
     width: 100%;
     height: 400px;
+    position: absolute;
+    top: 0;
   }
 }
