--- a/source/less/components/slider.less
+++ b/source/less/components/slider.less
@@ -13,47 +13,26 @@
   }
 }
 
-.slider__cat-image-fat {
-  display: block;
-  background-image: url("/img/before-mobile1.png");
-  background-repeat: no-repeat;
-  background-size: 100% auto;
-  width: 100%;
-  height: 243px;
-
-  // Ретина-кот
-  // @media (min-resolution: 2dppx) {
-  //   background-image: url("img/bg-header@2x.jpg");
-  //   background-size: 1338px auto;
-  // }
-
-  @media (min-width: @tablet) {
-    background-image: url("/img/cat-fat-tablet.png");
-    width: 296px;
-    height: 511px;
-  }
-}
-
 .slider__cat-image-slim {
-  @media (min-width: @tablet) {
-    background-image: url("/img/cat-slim-tablet.png");
-    width: 296px;
-    height: 511px;
+  @media (max-width: @mobile-only) {
+    display: none;
   }
 }
 
 .slider__wrapper {
   display: flex;
   justify-content: center;
+  margin-top: 11px;
 
   @media (min-width: @tablet) {
     margin-left: 70px;
     margin-right: 70px;
-    margin-top: 19px;
+    margin-top: 23px;
   }
 }
 
 .slider__text {
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
@@ -61,12 +40,15 @@
   text-align: center;
   width: 49px;
   height: 30px;
-  padding-top: 9px;
+  border: none;
+  background-color: @background-grey;
 
   @media (min-width: @tablet) {
     font-size: 20px;
     line-height: 30px;
     border-bottom: 1px dotted rgba(0, 0, 0, 0.4);
+    padding-left: 0;
+    padding-right: 0;
 
     &:hover {
       border-bottom: 1px solid rgba(0, 0, 0, 0.4);
