--- a/source/less/globals/global.less
+++ b/source/less/globals/global.less
@@ -11,32 +11,18 @@ body {
 
 @font-face {
   font-family: "Oswald";
+  src: url("../fonts/oswaldregular.woff2") format("woff2"),
+       url("../fonts/oswaldregular.woff") format("woff");
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/oswaldregular.woff2") format("woff2");
   font-display: swap;
 }
 
 @font-face {
   font-family: "Oswald";
+  src: url("../fonts/oswaldmedium.woff2") format("woff2"),
+       url("../fonts/oswaldmedium.woff") format("woff");
   font-style: normal;
-  font-weight: 400;
-  src: url("../fonts/oswaldregular.woff") format("woff");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Oswald";
-  font-style: normal;
-  font-weight: 400;
-  src: url("../fonts/oswaldmedium.woff2") format("woff2");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Oswald";
-  font-style: normal;
-  font-weight: 400;
-  src: url("../fonts/oswaldmedium.woff") format("woff");
+  font-weight: 500;
   font-display: swap;
 }
