--- a/source/less/components/shop.less
+++ b/source/less/components/shop.less
@@ -1,5 +1,6 @@
 .shop {
   position: relative;
+  padding-top: 3px;
 }
 
 .shop__container {
@@ -13,7 +14,7 @@
 
   @media (min-width: @laptop) {
     width: 1220px;
-    margin-top: 50px;
+    margin-top: 16px;
   }
 }
 
