--- a/source/less/components/data-form.less
+++ b/source/less/components/data-form.less
@@ -8,26 +8,62 @@
   width: 280px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 70px;
+  margin-bottom: 68px;
 
   @media (min-width: @tablet) {
     width: 630px;
+    margin-bottom: 93px;
   }
 
   @media (min-width: @laptop) {
     width: 1220px;
+    margin-bottom: 86px;
   }
 }
 
 .data-form__bio-and-program-wrapper {
   @media (min-width: @laptop) {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 570px 571px;
+    gap: 0px 78px;
+  }
+}
+
+.data-form__bio-and-program-wrapper .data-form__item {
+  margin-bottom: 11px;
+
+  @media (min-width: @tablet) {
+    margin-bottom: 22px;
+  }
+}
+
+.data-form__bio-and-program-wrapper .data-form__item:last-of-type {
+  margin-bottom: 0;
+}
+
+.data-form__bio-and-program-wrapper .data-form__list:first-of-type {
+  padding-bottom: 19px;
+
+  @media (min-width: @tablet) {
+    padding-bottom: 0;
+  }
+
+  @media (min-width: @laptop) {
+    margin-top: 0px;
   }
 }
 
 .data-form__bio-and-program-wrapper .data-form__list:last-of-type {
   margin-top: 28px;
+
+  @media (min-width: @tablet) {
+    margin-top: 74px;
+    border: 1px solid @border-grey2;
+  }
+
+  @media (min-width: @laptop) {
+    margin-top: 0px;
+  }
 }
 
 .data-form__bio-and-program-wrapper .data-form__list:last-of-type .data-form__item {
@@ -38,7 +74,7 @@
   }
 
   @media (min-width: @tablet) {
-    padding-left: 28px;
+    padding-left: 44px;
 
     &:first-of-type {
       padding-top: 30px;
@@ -53,12 +89,6 @@
 
 .data-form__list {
   margin-bottom: 0;
-}
-
-.data-form__list:last-of-type {
-  @media (min-width: @tablet) {
-    border: 1px solid @border-grey2;
-  }
 }
 
 .data-form__item {
@@ -117,6 +147,7 @@
   @media (min-width: @tablet) {
     font-size: 20px;
     line-height: 30px;
+    margin-right: 20px;
   }
 }
 
@@ -124,7 +155,6 @@
   color: @special_dark-grey;
   width: 100%;
   height: 45px;
-  margin-bottom: 14px;
   font-family: "Oswald", "Arial", sans-serif;
   text-transform: uppercase;
   font-size: 16px;
@@ -137,11 +167,7 @@
   }
 
   &:focus {
-    border: 2px solid @special_dark-grey;
-  }
-
-  &:invalid {
-    border: 2px solid @invalid;
+    outline: 2px solid @special_dark-grey;
   }
 
   &:required {
@@ -153,6 +179,11 @@
     line-height: 30px;
     padding-left: 19px;
   }
+}
+
+//Invalid class should be added through JS
+.data-form__input--invalid {
+  outline: 2px solid @invalid;
 }
 
 .data-form__radio {
@@ -190,7 +221,10 @@
     border: 1px solid @border-grey;
 
     @media (min-width: @tablet) {
-      top: 0;
+      top: -5px;
+      width: 40px;
+      height: 40px;
+      left: -46px;
     }
   }
 }
@@ -210,7 +244,10 @@
   background-color: @green;
 
   @media (min-width: @tablet) {
-    top: 9px;
+    top: 7px;
+    width: 18px;
+    height: 18px;
+    left: -34px;
   }
 }
 
@@ -229,15 +266,24 @@
   }
 }
 
+.data-form__contacts-wrapper .data-form__item {
+  @media (min-width: @tablet) {
+    margin-bottom: 8px;
+  }
+}
+
+
+
 .data-form__icon {
-  fill: none;
   position: absolute;
 
   &--envelope {
+    fill: none;
     top: 18px;
     right: 17px;
     width: 18px;
     height: 14px;
+    stroke: @black;
   }
 
   &--phone {
@@ -245,6 +291,7 @@
     height: 20px;
     top: 13px;
     right: 13px;
+    fill: @black;
   }
 }
 
@@ -256,17 +303,19 @@
   stroke: @green;
 }
 
-.data-form__input--email:invalid ~ .data-form__icon--envelope {
+.data-form__input--phone:focus ~ .data-form__icon--phone {
+  fill: @green;
+}
+
+//Modificators "email-invalid" and "phone-invalid" should be added through JS
+
+.data-form__input--email-invalid ~ .data-form__icon--envelope {
   stroke: @invalid;
 }
 
-.data-form__input--phone:focus ~ .data-form__icon--phone {
-  stroke: @green;
+.data-form__input--phone-invalid ~ .data-form__icon--phone {
+  fill: @invalid;
 }
-
-// .data-form__input--phone:invalid ~ .data-form__icon--phone {
-//   stroke: @invalid;
-// }
 
 .data-form__title {
   position: relative;
@@ -278,7 +327,7 @@
   left: -20px;
 
   @media (min-width: @tablet) {
-    padding-left: 39px;
+    padding-left: 30px;
     padding-right: 42px;
     margin-left: 40px;
     left: -70px;
@@ -287,6 +336,7 @@
   @media (min-width: @laptop) {
     margin-left: 70px;
     left: -110px;
+    padding-left: 40px;
   }
 }
 
@@ -305,11 +355,28 @@
     font-size: 36px;
     line-height: 36px;
     font-weight: 400;
+    margin-top: -24px;
   }
 }
 
 .data-form__contacts-wrapper .data-form__container {
-  margin-bottom: 23px;
+  margin-bottom: 30px;
+
+  @media (min-width: @tablet) {
+    margin-bottom: 91px;
+  }
+
+  @media (min-width: @laptop) {
+    margin-bottom: 70px;
+  }
+}
+
+.data-form__contacts-wrapper .data-form__list {
+  @media (min-width: @laptop) {
+    display: grid;
+    grid-template-columns: 570px 570px;
+    gap: 0px 77px;
+  }
 }
 
 .data-form__checkbox-input {
@@ -329,6 +396,7 @@
   @media (min-width: @tablet) {
     font-size: 20px;
     line-height: 30px;
+    margin-left: 44px;
   }
 
   &::before {
@@ -341,7 +409,9 @@
     top: -6px;
 
     @media (min-width: @tablet) {
-      top: 0;
+      top: -7px;
+      width: 40px;
+      height: 40px;
     }
   }
 
@@ -360,13 +430,16 @@
   position: absolute;
   width: 18px;
   height: 14px;
-  border-radius: 50%;
   left: 7px;
   top: 3px;
   background-image: url("/img/tick.svg");
 
   @media (min-width: @tablet) {
-    top: 7px;
+    top: 6px;
+    width: 24px;
+    height: 19px;
+    background-repeat: no-repeat;
+    left: 9px;
   }
 }
 
@@ -393,17 +466,22 @@
     font-size: 36px;
     line-height: 36px;
     font-weight: 400;
+    margin-top: -24px;
   }
 }
 
 .data-form__comments-wrapper .data-form__container {
-  margin-bottom: 23px;
+  margin-bottom: 34px;
+
+  @media (min-width: @tablet) {
+    margin-bottom: 43px;
+  }
 }
 
 .data-form__comment-field {
   margin-top: 38px;
-  width: calc(100% - 30px);
-  height: 150px;
+  width: calc(100% - 29px);
+  height: 130px;
   resize: none;
   font-size: 16px;
   line-height: 18px;
@@ -441,11 +519,14 @@
 .data-form__extra-wrapper .data-form__list {
   @media (min-width: @tablet) {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 315px 315px;
+    margin-top: 0;
+    gap: 16px 29px;
   }
 
   @media (min-width: @laptop) {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 315px 315px 315px 315px;
+    gap: 0 9px;
   }
 }
 
@@ -454,7 +535,7 @@
   font-size: 24px;
   line-height: 26px;
   font-weight: 400;
-  margin-bottom: 34px;
+  margin-bottom: 38px;
   margin-top: -16px;
 
   @media (max-width: @mobile-only) {
@@ -465,6 +546,8 @@
     font-size: 36px;
     line-height: 36px;
     font-weight: 400;
+    margin-top: -24px;
+    margin-bottom: 63px;
   }
 }
 
@@ -477,7 +560,11 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-items: start;
-    margin-bottom: 72px;
+    margin-bottom: 51px;
+  }
+
+  @media (min-width: @laptop) {
+    margin-bottom: 61px;
   }
 }
 
@@ -489,13 +576,17 @@
   width: 100%;
 
   @media (min-width: @tablet) {
-    margin-left: 0;
+    margin-left: 2px;
     width: 282px;
     height: 52px;
+    font-size: 20px;
+    line-height: 0;
+    margin-top: 34px;
   }
 
   @media (min-width: @laptop) {
     width: 568px;
+    margin-top: 42px;
   }
 }
 
@@ -512,5 +603,11 @@
     line-height: 16px;
     margin-top: auto;
     margin-bottom: auto;
+    margin-left: 30px;
+  }
+
+  @media (min-width: @laptop) {
+    padding-top: 20px;
+    margin-left: 40px;
   }
 }
