--- a/source/less/components/page.less
+++ b/source/less/components/page.less
@@ -85,12 +85,12 @@
   font-size: 36px;
   line-height: 36px;
   font-weight: 400;
-  padding-top: 27px;
-  padding-bottom: 41px;
-  padding-left: 20px;
   width: 280px;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 28px;
+  margin-bottom: 0;
+  padding-bottom: 41px;
 
   @media (max-width: @mobile-only) {
     border-bottom: 1px solid @shop-grey;
@@ -100,9 +100,10 @@
     font-size: 60px;
     line-height: 60px;
     font-weight: 400;
-    padding-bottom: 22px;
+    padding-bottom: 19px;
     padding-left: 30px;
     width: 738px;
+    margin-top: 42px;
   }
 
   @media (min-width: @laptop) {
@@ -112,5 +113,6 @@
     padding-bottom: 2px;
     padding-left: 110px;
     width: 1330px;
+    margin-top: 76px;
   }
 }
