--- a/source/less/components/programs.less
+++ b/source/less/components/programs.less
@@ -204,6 +204,43 @@
 
 .programs__link-wrapper {
   position: relative;
+  display: flex;
+  margin-top: 42px;
+  margin-bottom: 20px;
+
+  @media (min-width: @tablet) {
+    margin-top: 51px;
+  }
+
+  @media (min-width: @laptop) {
+    margin-top: 27px;
+  }
+
+  &::after {
+    content: "";
+    position: static;
+    display: block;
+    width: 24px;
+    height: 12px;
+    background-image: url("../img/arrow-icon.png");
+    background-repeat: no-repeat;
+    margin-top: 2px;
+
+    @media (min-width: @tablet) {
+      margin-top: 9px;
+    }
+  }
+
+  &:hover::after {
+    width: 32px;
+    background-image: url("../img/arrow-icon-long.svg");
+  }
+
+  &:active::after {
+    width: 32px;
+    background-image: url("../img/arrow-icon-long.svg");
+    opacity: 0.3;
+  }
 }
 
 .programs__link {
@@ -213,53 +250,26 @@
   text-transform: uppercase;
   font-size: 16px;
   line-height: 16px;
-  margin-top: 42px;
   margin-left: 19px;
   padding-bottom: 22px;
-  margin-bottom: 20px;
+  margin-right: 15px;
+  max-width: 208px;
 
   @media (min-width: @tablet) {
     margin-left: 0;
-    margin-top: 51px;
     padding-bottom: 57px;
     font-size: 20px;
     line-height: 30px;
     margin-bottom: 0px;
+    max-width: 340px;
   }
 
   @media (min-width: @laptop) {
-    margin-top: 27px;
     padding-bottom: 59px;
-  }
-
-  &::after {
-    content: "";
-    position: absolute;
-    display: block;
-    left: 121px;
-    bottom: 24px;
-    width: 24px;
-    height: 12px;
-    background-image: url("../img/arrow-icon.png");
-
-    @media (min-width: @tablet) {
-      left: 133px;
-      top: 9px;
-    }
-  }
-
-  &:hover::after {
-    width: 32px;
-    background-image: url("../img/arrow-icon-long.svg");
+    max-width: 435px;
   }
 
   &:active {
-    opacity: 0.3;
-  }
-
-  &:active::after {
-    width: 32px;
-    background-image: url("../img/arrow-icon-long.svg");
     opacity: 0.3;
   }
 }
